--- a/public/template.html
+++ b/public/template.html
@@ -9,6 +9,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
+            font-size: 20px;
             /* background-color: #f2f2f2; */
         }
         .container {
@@ -86,7 +87,7 @@
             </tbody>
         </table>
         <div class="invoice-total">            
-            <p><strong>Total:</strong> R$ {{Total}} </p>
+            <p><strong>Total:</strong> {{Total}} </p>
         </div>
         <div class="payment-details">            
 			<p>Este orçamento é valido até {{DateExpiration}}</p>
