--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,12 @@
 <html>
 
 <head>
-  <title>Nodejs API boilerplate</title>
+  <title>Tubo Oeste</title>
   <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
 <body>
-  <h1>A boilerplate for REST API Development with Node.js, Express, and MongoDB</h1>
-  <p>Author: <a href="mailto:maitraysuthar@gmail.com">@Maitray Suthar</a></p>
+  <h1>Tubo Oeste REST API Developed with Node.js, Express, and MongoDB</h1>
 </body>
 
 </html>
