--- a/public/template.html
+++ b/public/template.html
@@ -62,7 +62,7 @@
 <body>
     <div class="container">
         <div class="invoice-logo">
-            <img src="logo.svg"/>
+            <img src="./logo.svg"/>
         </div>
         <div class="invoice-header">
             <h1>Orçamento</h1>
