--- a/public/template.html
+++ b/public/template.html
@@ -25,14 +25,20 @@
         .invoice-header {
             text-align: center;
             margin-bottom: 20px;
+            position: relative; /* Adicionado para contexto de posicionamento */
         }
         .invoice-header h1 {
             color: #960404;
+            margin-top: 60px; /* Espaço adicional para a logo */
         }
         .invoice-logo {
             position: absolute;
-            top: 20px;
-            left: 20px;
+            top: 0;
+            left: 0;
+            margin: 20px; /* Espaço entre a borda e a logo */
+        }
+        .invoice-logo img {
+            max-width: 100px; /* Tamanho da logo */
         }
         .invoice-table {
             width: 100%;
@@ -51,18 +57,18 @@
             margin-top: 20px;
             text-align: right;
         }
-		.bill-to {
-			text-align: right;
-		}
-		.payment-details {
-			font-size: 10px
-		}
+        .bill-to {
+            text-align: right;
+        }
+        .payment-details {
+            font-size: 10px;
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <div class="invoice-logo">
-            <img src="./logo.svg"/>
+            <img src="https://orcamentex-backend.onrender.com/logo.png" alt="Logo"/> 
         </div>
         <div class="invoice-header">
             <h1>Orçamento</h1>
