ajuste tamanho logo

--- a/public/template.html
+++ b/public/template.html
@@ -16,6 +16,7 @@
             max-width: 800px;
             margin: 20px auto;
             padding: 20px;
+            padding-top: 100px; /* Espaço adicional no topo para acomodar a logo */
             background-color: #fff;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -29,16 +30,14 @@
         }
         .invoice-header h1 {
             color: #960404;
-            margin-top: 60px; /* Espaço adicional para a logo */
         }
         .invoice-logo {
             position: absolute;
-            top: 0;
-            left: 0;
-            margin: 20px; /* Espaço entre a borda e a logo */
+            top: 20px;
+            left: 20px;
         }
         .invoice-logo img {
-            max-width: 100px; /* Tamanho da logo */
+            max-width: 150px; /* Tamanho aumentado da logo */
         }
         .invoice-table {
             width: 100%;
