sending logo abs

--- a/public/template_precos.html
+++ b/public/template_precos.html
@@ -67,7 +67,7 @@
 <body>
     <div class="container">
         <div class="invoice-logo">
-            <img id="logo" src="./logo.png" alt="Logo"/>   
+            <img src="https://orcamentex-backend.onrender.com/logo.png" alt="Logo"/>  
         </div>
         <div class="invoice-header">
             <h1>Tabela de Preços</h1>
