--- a/public/template_precos.html
+++ b/public/template_precos.html
@@ -43,6 +43,7 @@
             width: 100%;
             border-collapse: collapse;
             margin-bottom: 20px;
+            page-break-inside: auto; /* Evitar quebra dentro da tabela */
         }
         .invoice-table th, .invoice-table td {
             border: 1px solid #ddd;
@@ -51,6 +52,12 @@
         }
         .invoice-table th {
             background-color: #f2f2f2;
+        }
+        .invoice-table tr {
+            page-break-inside: avoid; /* Evitar quebra dentro de linhas */
+        }
+        .invoice-table tr:last-child {
+            page-break-after: auto; /* Permitir quebra após a última linha */
         }
         .invoice-total {
             margin-top: 20px;
@@ -62,12 +69,20 @@
         .payment-details {
             font-size: 10px;
         }
+        @media print {
+            .container {
+                page-break-after: always; /* Garantir quebra de página após o container */
+            }
+            .invoice-table {
+                page-break-before: always; /* Garantir quebra de página antes da tabela */
+            }
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <div class="invoice-logo">
-            <img src="https://orcamentex-backend.onrender.com/logo.png" alt="Logo"/>  
+            <img src="https://orcamentex-backend.onrender.com/logo.png" alt="Logo"/> 
         </div>
         <div class="invoice-header">
             <h1>Tabela de Preços</h1>
@@ -84,7 +99,9 @@
                 {{ProductList}}                
                 <!-- Insert invoice items dynamically here -->
             </tbody>
-        </table>            
-    </div>   
-</body>
+        </table>
+        <div class="invoice-total">
+            <!-- Total information can go here -->
+        </div>
+    </div>
 </html>
